--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/com/example/page_test_1/Page_test_1.java=UTF-8
 encoding//src/com/example/page_test_1/page3.java=UTF-8
 encoding//src/com/example/page_test_1/page_2_test.java=UTF-8
 encoding//src/com/example/testfragment/Add_choice_MainActivity.java=UTF-8
